fix: icon alignment for tag modal

--- a/less/common/Modal.less
+++ b/less/common/Modal.less
@@ -130,6 +130,12 @@
   }
 }
 
+.icon {
+  position: relative;
+  top: 2px;
+  width: 16px;
+  text-align: center;
+}
 
 @media @phone {
   .ModalManager.fade {
